# sudoku

./: .gitignore  CMakeLists.txt  README.md  generator.c  generator.h  helpers.c  helpers.h  main.c  main.h
